# oh-my-pi

./: .gitignore  Cargo.toml  README.md  package.json  tsconfig.base.json  tsconfig.tools.json  turbo.json
.github/: VOUCHED.td
.github/workflows/: ci.yml
crates/pi-ast/: Cargo.toml
crates/pi-ast/src/: block.rs  summary.rs
crates/pi-ast/src/language/: mod.rs  parsers.rs
crates/pi-iso/: Cargo.toml
crates/pi-iso/src/: btrfs.rs  lib.rs  linux_reflink.rs  overlayfs.rs  projfs.rs  rcopy.rs  zfs.rs
crates/pi-natives/: Cargo.toml
crates/pi-natives/src/: ast.rs  grep.rs  highlight.rs  iso.rs  lib.rs
crates/pi-natives/src/chunk/: state.rs  types.rs
crates/pi-shell/: Cargo.toml
crates/pi-shell/src/: coreutils.rs  lib.rs  shell.rs
crates/pi-shell/tests/: minimizer_fixtures.rs
crates/pi-uu-grep/src/: lib.rs
docs/: advisor-watchdog.md  models.md  natives-addon-loader-runtime.md  natives-build-release-debugging.md  porting-to-natives.md  settings.md  system-prompt-customization.md  task-agent-discovery.md
docs/tools/: ast-edit.md  ast-grep.md  bash.md  browser.md  checkpoint.md  debug.md  edit.md  eval.md  exit_plan_mode.md  find.md  github.md  job.md  lsp.md  read.md  recall.md  retain.md  rewind.md  search.md  search_tool_bm25.md  task.md  web_search.md
patches/: puppeteer-core@25.3.0.patch
python/omp-rpc/src/omp_rpc/: protocol.py
python/robomp/src/: config.py
scripts/: ci-release-build-binaries.test.ts  ci-release-build-binaries.ts  ci-release-publish.ts  ci-release-verify-natives.ts  ci-test-ts.ts  edit_benchmark_common.py  sync-versions.ts
scripts/install-tests/: binary.dockerfile  run-ci.sh
