[package]
name = "pi-iso"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
async-trait = "0.1"
tokio = { version = "1", features = ["fs", "process", "rt", "macros", "io-util"] }
similar = "3.1.0"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(target_os = "linux")'.dependencies]
parking_lot = "0.12.5"

[target.'cfg(windows)'.dependencies]
parking_lot = "0.12.5"
windows-sys = { version = "0.61", features = [
   "Win32_Foundation",
   "Win32_Storage_FileSystem",
   "Win32_Storage_ProjectedFileSystem",
   "Win32_System_Com",
   "Win32_System_LibraryLoader",
   "Win32_System_IO",
   "Win32_System_Ioctl",
] }
